# Human-Typing-Simulation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/: desktop_example.py
humantyping/: __init__.py  config.json  config.py  controller.py  gui.py  integration.py  keyboard.py  language.py  paraphrase.py  simulation.py  typer.py  winutil.py
